force-app/main/default/objects/WAC_RPT_Detail_Out__c/WAC_RPT_Detail_Out__c.object-meta.xml
<CustomObject>
    <description>WAC Report Detail for outbound to agencies</description>
    <label>WAC RPT Detail Out</label>
    <nameField>
        <displayFormat>WRO{0000000000}</displayFormat>
        <label>NAME (Report Detail Seq)</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WAC RPT Detail Out</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>