force-app/main/default/objects/WAC_RPT_Detail_Out__c/fields/BILLING_CITY__c.field-meta.xml
<CustomField>
    <fullName>BILLING_CITY__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>BILLING CITY</label>
    <length>30</length>
    <type>Text</type>
</CustomField>