force-app/main/default/objects/WAC_RPT_Detail_Out__c/fields/BILLING_STATE__c.field-meta.xml
<CustomField>
    <fullName>BILLING_STATE__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>BILLING STATE</label>
    <length>2</length>
    <type>Text</type>
</CustomField>