force-app/main/default/objects/WAC_RPT_Detail_Out__c/fields/BILLING_STREET__c.field-meta.xml
<CustomField>
    <fullName>BILLING_STREET__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>BILLING STREET</label>
    <length>30</length>
    <type>Text</type>
</CustomField>