force-app/main/default/objects/WAC_RPT_Detail_Out__c/fields/BILLING_SUFFIX__c.field-meta.xml
<CustomField>
    <fullName>BILLING_SUFFIX__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>BILLING SUFFIX</label>
    <length>4</length>
    <type>Text</type>
</CustomField>