force-app/main/default/objects/WAC_RPT_Detail_Out__c/fields/BILLING_ZIP__c.field-meta.xml
<CustomField>
    <fullName>BILLING_ZIP__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>BILLING ZIP</label>
    <length>5</length>
    <type>Text</type>
</CustomField>