force-app/main/default/objects/WAC_RPT_Detail_Out__c/fields/CERTIFIED_DATE__c.field-meta.xml
<CustomField>
    <fullName>CERTIFIED_DATE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CERTIFIED DATE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>