force-app/main/default/objects/WAC_RPT_Detail_Out__c/fields/DETAIL_NO__c.field-meta.xml
<CustomField>
    <fullName>DETAIL_NO__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>DETAIL NO</label>
    <length>30</length>
    <type>Text</type>
</CustomField>