force-app/main/default/objects/WAC_RPT_Detail_Out__c/fields/POST_ENROLL_VERIFICATION__c.field-meta.xml
<CustomField>
    <fullName>POST_ENROLL_VERIFICATION__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>POST ENROLL VERIFICATION</label>
    <length>8</length>
    <type>Text</type>
</CustomField>