force-app/main/default/objects/WAC_RPT_Detail_Out__c/fields/SERVICE_APT__c.field-meta.xml
<CustomField>
    <fullName>SERVICE_APT__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>SERVICE APT</label>
    <length>8</length>
    <type>Text</type>
</CustomField>