force-app/main/default/objects/WAC_RPT_Detail_Out__c/fields/SERVICE_HOUSE_NO__c.field-meta.xml
<CustomField>
    <fullName>SERVICE_HOUSE_NO__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>SERVICE HOUSE NO</label>
    <length>6</length>
    <type>Text</type>
</CustomField>