force-app/main/default/objects/WAC_RPT_Detail_Out__c/fields/SERVICE_PREFIX__c.field-meta.xml
<CustomField>
    <fullName>SERVICE_PREFIX__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>SERVICE PREFIX</label>
    <length>2</length>
    <type>Text</type>
</CustomField>