force-app/main/default/objects/WAC_RPT_Detail_Out__c/fields/SERVICE_ZIP4__c.field-meta.xml
<CustomField>
    <fullName>SERVICE_ZIP4__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SERVICE ZIP4</label>
    <length>4</length>
    <type>Text</type>
</CustomField>